--enable-preview for surefire